--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="icon" type="image/png" href="assets/images/logo.png" />
-  <title data-headName></title>
+  <title data-headName>Inicio |</title>
   <link rel="stylesheet" href="assets/css/styles.css">
   <script defer src="assets/js/config.js"></script>
   <script defer src="assets/js/main.js"></script>
@@ -15,7 +15,7 @@
    <h1 data-company></h1>
   <nav>
     <a href="index.html">Inicio</a>
-    <a href="services.html">Servicios</a>
+    <a href="services.html">Servicios</a>   
     <a href="about-us.html">Sobre Nosotros</a>
   </nav>
 </header>
@@ -40,7 +40,6 @@
     <button id="btn-contact">Hablar con un experto</button>
   </div>
 </section>
-
 
 
 <section class="cards">
