--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <script defer src="assets/js/config.js"></script>
     <script defer src="assets/js/main.js"></script>
+    <script defer src="assets/js/footer-links.js"></script>
 </head>
 
 <body>
@@ -55,6 +56,34 @@
 
     <footer>
         © <span data-year></span> <span data-company></span>
+
+        <div class="footer-buttons">
+            <a class="footer-btn linkedin" data-link="linkedinLink" target="_blank" aria-label="LinkedIn">
+                <img src="assets/images/LinkedIn_logo.webp" alt="LinkedIn">
+            </a>
+
+            <a class="footer-btn whatsapp" data-link="whatsappLink" target="_blank" aria-label="WhatsApp">
+                <img src="assets/images/WhatsApp-logo.png" alt="WhatsApp">
+            </a>
+
+            <a class="footer-btn email" data-link="emailLink" aria-label="Correo">
+                <img src="assets/images/Email_icon.png" alt="Email">
+            </a>
+        </div>
+
+        <!-- <div class="footer-buttons">
+    <a href="https://www.linkedin.com/company/js2-tech-solutions" target="_blank" class="footer-btn linkedin" aria-label="LinkedIn">
+      <img src="assets/images/LinkedIn_logo.webp" alt="LinkedIn">
+    </a>
+
+    <a href="https://wa.me/573002584013" target="_blank" class="footer-btn whatsapp" aria-label="WhatsApp">
+      <img src="assets/images/WhatsApp-logo.png" alt="WhatsApp">
+    </a>
+
+    <a href="mailto:contacto@js2solutions.com.co" class="footer-btn email" aria-label="Correo">
+      <img src="assets/images/Email_icon.png" alt="Email">
+    </a>
+  </div> -->
     </footer>
 
 </body>
