--- a/about-us.html
+++ b/about-us.html
@@ -46,7 +46,7 @@
         <div class="card"><strong>Ubicación:<br></strong>Bogotá, Cundinamarca, Colombia</div>
         <div class="card"><strong>Tamaño:<br></strong>2-10 empleados altamente especializados</div>
         <div class="card">
-          <strong>Certificaciones:<br></strong>
+          <strong>Certificaciones:<br><br></strong>
           <button class="btn-ver-mas" onclick="mostrarCertificados()">
             Ver más
           </button>
@@ -106,7 +106,35 @@
 
 
   <footer>
-    <p>Confianza, innovación y seguridad</p>
+    © <span data-year></span> <span data-company></span>
+
+    <div class="footer-buttons">
+      <a class="footer-btn linkedin" data-link="linkedinLink" target="_blank" aria-label="LinkedIn">
+        <img src="assets/images/LinkedIn_logo.webp" alt="LinkedIn">
+      </a>
+
+      <a class="footer-btn whatsapp" data-link="whatsappLink" target="_blank" aria-label="WhatsApp">
+        <img src="assets/images/WhatsApp-logo.png" alt="WhatsApp">
+      </a>
+
+      <a class="footer-btn email" data-link="emailLink" aria-label="Correo">
+        <img src="assets/images/Email_icon.png" alt="Email">
+      </a>
+    </div>
+
+    <!-- <div class="footer-buttons">
+    <a href="https://www.linkedin.com/company/js2-tech-solutions" target="_blank" class="footer-btn linkedin" aria-label="LinkedIn">
+      <img src="assets/images/LinkedIn_logo.webp" alt="LinkedIn">
+    </a>
+
+    <a href="https://wa.me/573002584013" target="_blank" class="footer-btn whatsapp" aria-label="WhatsApp">
+      <img src="assets/images/WhatsApp-logo.png" alt="WhatsApp">
+    </a>
+
+    <a href="mailto:contacto@js2solutions.com.co" class="footer-btn email" aria-label="Correo">
+      <img src="assets/images/Email_icon.png" alt="Email">
+    </a>
+  </div> -->
   </footer>
 
 </body>
