--- a/about-us.html
+++ b/about-us.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="assets/css/styles.css">
   <script defer src="assets/js/config.js"></script>
   <script defer src="assets/js/main.js"></script>
+  <script defer src="assets/js/footer-links.js"></script>
 </head>
 
 <body>
@@ -21,8 +22,8 @@
           <a href="services.html">Servicios</a><span class="arrow">&#9660;</span>
         </button>
         <div class="dropdown-content">
-          <a href="services.html#infraestructura">Seguridad de Infraestructura</a>
-          <a href="services.html#auditorias">Auditorías y Cumplimiento</a>
+          <a href="services.html#implementation">Implementación</a>
+          <a href="services.html#design">Diseño de redes</a>
           <a href="services.html#monitoreo">Monitoreo y Respuesta</a>
         </div>
       </div>
