--- a/about-us.html
+++ b/about-us.html
@@ -24,7 +24,10 @@
         <div class="dropdown-content">
           <a href="services.html#implementation">Implementación</a>
           <a href="services.html#design">Diseño de redes</a>
-          <a href="services.html#monitoreo">Monitoreo y Respuesta</a>
+          <a href="services.html#VPN">Soluciones VPN</a>
+          <a href="services.html#hardening">Hardening</a>
+          <a href="services.html#monitoreo">Monitoreo infraestructura</a>
+          <a href="services.html#consultoria">Consultoría</a>
         </div>
       </div>
       <a href="about-us.html">Sobre Nosotros</a>
