--- a/services.html
+++ b/services.html
@@ -25,7 +25,10 @@
         <div class="dropdown-content">
           <a href="services.html#implementation">Implementación</a>
           <a href="services.html#design">Diseño de redes</a>
-          <a href="services.html#monitoreo">Monitoreo y Respuesta</a>
+          <a href="services.html#VPN">Soluciones VPN</a>
+          <a href="services.html#hardening">Hardening</a>
+          <a href="services.html#monitoreo">Monitoreo infraestructura</a>
+          <a href="services.html#consultoria">Consultoría</a>
         </div>
       </div>
       <a href="about-us.html">Sobre Nosotros</a>
@@ -108,12 +111,148 @@
       </div>
     </article>
 
+
+    <!-- HERO 3  -->
+    <article class="service-hero" id="VPN">
+      <video autoplay muted loop playsinline class="bg-video">
+        <source src="assets/video/network-connection.mp4" type="video/mp4">
+      </video>
+
+      <div class="overlay">
+        <div class="service-content left">
+          <div class="service-card">
+            <h2>Soluciones VPN</h2>
+            <p>
+              Implementación de conexiones VPN seguras para acceso
+              remoto y comunicación confidencial.
+            </p>
+          </div>
+
+          <div class="service-examples">
+            <h3>Detalles</h3>
+            <ul>
+              <li>Instalación y configuración de VPN.</li>
+              <li>Protección de datos corporativos.</li>
+              <li>Incluye monitoreo, mantenimiento y asistencia técnica de nuestros expertos, garantizando que tu red
+                privada virtual funcione de manera continua y con el máximo rendimiento.</li>
+              <li>Interconexión de redes privadas.</li>
+              <li>Acceso remoto de usuarios a aplicaciones internas y privadas de forma segura.</li>
+              <li>Soporte y gestión profesional.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </article>
+
+
+
+    <!-- HERO 4 (INTERCALADO) -->
+    <article class="service-hero" id="hardening">
+      <video autoplay muted loop playsinline class="bg-video">
+        <source src="assets/video/network-connection.mp4" type="video/mp4">
+      </video>
+
+      <div class="overlay">
+        <div class="service-content right">
+          <div class="service-card">
+            <h2>Hardening de Sistemas</h2>
+            <p>
+              Endurecimiento de configuraciones para minimizar vulnerabilidades y mejorar la postura de seguridad.
+            </p>
+          </div>
+
+          <div class="service-examples">
+            <h3>Detalles</h3>
+            <ul>
+              <li>Realizamos un proceso completo de hardening en servidores y dispositivos, eliminando vulnerabilidades
+                y configurando ajustes de seguridad avanzados para proteger tus sistemas de accesos no autorizados.</li>
+              <li>Implementamos políticas de seguridad personalizadas y optimizadas para mitigar riesgos, protegiendo tu
+                infraestructura de posibles ataques cibernéticos, como malware o exploits de día cero.</li>
+              <li>Nos aseguramos de que tu infraestructura cumpla con las normativas y estándares de seguridad más
+                exigentes, como ISO 27001 o NIST, garantizando la integridad de tus datos y la seguridad operativa.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </article>
+
+
+    <!-- HERO 5  -->
+    <article class="service-hero" id="monitoreo">
+      <video autoplay muted loop playsinline class="bg-video">
+        <source src="assets/video/network-connection.mp4" type="video/mp4">
+      </video>
+
+      <div class="overlay">
+        <div class="service-content left">
+          <div class="service-card">
+            <h2>Monitoreo 7x24</h2>
+            <p>
+              Monitoreo continuo de tu infraestructura para detectar y responder a amenazas en tiempo real.
+            </p>
+          </div>
+
+          <div class="service-examples">
+            <h3>Detalles</h3>
+            <ul>
+              <li>Detectamos cualquier interrupción o caída de equipos en tiempo real, asegurando que tu red y
+                servidores estén siempre operativos y funcionando de manera eficiente, 24/7.</li>
+              <li>Nuestro equipo técnico está disponible todo el tiempo para identificar, diagnosticar y resolver
+                cualquier incidente relacionado con fallos en hardware, servidores o dispositivos, minimizando el tiempo
+                de inactividad.</li>
+              <li>Monitoreamos el rendimiento y la disponibilidad de todos los componentes de tu infraestructura,
+                anticipándonos a posibles fallos y realizando ajustes preventivos para evitar caídas o interrupciones no
+                programadas.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </article>
+
+
+
+    <!-- HERO 6 (INTERCALADO) -->
+    <article class="service-hero" id="consultoria">
+      <video autoplay muted loop playsinline class="bg-video">
+        <source src="assets/video/network-connection.mp4" type="video/mp4">
+      </video>
+
+      <div class="overlay">
+        <div class="service-content right">
+          <div class="service-card">
+            <h2>Consultoría de TI</h2>
+            <p>
+              Asesoría estratégica para optimizar tu infraestructura y alinearte con mejores prácticas de seguridad.
+            </p>
+          </div>
+
+          <div class="service-examples">
+            <h3>Detalles</h3>
+            <ul>
+              <li>Ofrecemos asesoría experta para evaluar tu infraestructura tecnológica actual y optimizarla,
+                asegurando que tus sistemas, servidores y redes funcionen al máximo rendimiento, alineados con tus
+                objetivos de negocio.</li>
+              <li>Te ayudamos a desarrollar estrategias de seguridad cibernética a medida para proteger tu
+                infraestructura y datos sensibles, previniendo riesgos y garantizando el cumplimiento de normativas de
+                seguridad.</li>
+              <li>Guiamos tu empresa en la adopción de nuevas tecnologías y herramientas, desde la migración a la nube
+                hasta la integración de soluciones de última generación, optimizando procesos y mejorando la
+                competitividad en el mercado.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </article>
+
   </section>
 
   <nav class="vertical-nav">
     <a href="#implementation" class="dot"></a>
     <a href="#design" class="dot"></a>
-    <a href="#cloud" class="dot"></a>
+    <a href="#VPN" class="dot"></a>
+    <a href="#hardening" class="dot"></a>
+    <a href="#monitoreo" class="dot"></a>
+    <a href="#consultoria" class="dot"></a>
   </nav>
 
 
