--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
     <header class="header">
         <h1 data-headName></h1>
         <nav>
-            <a href="index.html">Inicio</a>
+            <a href="index">Inicio</a>
             <div class="dropdown">
                 <button class="dropbtn">
-                    <a href="services.html">Servicios</a><span class="arrow">&#9660;</span>
+                    <a href="/SERVICIOS/">Servicios</a><span class="arrow">&#9660;</span>
                 </button>
                 <div class="dropdown-content">
-                    <a href="services.html#implementation">Implementación</a>
-                    <a href="services.html#design">Diseño de redes</a>
-                    <a href="services.html#VPN">Soluciones VPN</a>
-                    <a href="services.html#hardening">Hardening</a>
-                    <a href="services.html#monitoreo">Monitoreo infraestructura</a>
-                    <a href="services.html#consultoria">Consultoría</a>
+                    <a href="/SERVICIOS/#implementation">Implementación</a>
+                    <a href="/SERVICIOS/#design">Diseño de redes</a>
+                    <a href="/SERVICIOS/#VPN">Soluciones VPN</a>
+                    <a href="/SERVICIOS/#hardening">Hardening</a>
+                    <a href="/SERVICIOS/#monitoreo">Monitoreo infraestructura</a>
+                    <a href="/SERVICIOS/#consultoria">Consultoría</a>
                 </div>
             </div>
-            <a href="about-us.html">Sobre Nosotros</a>
+            <a href="/ABOUTUS/">Sobre Nosotros</a>
         </nav>
     </header>
 
