--- a/SERVICIOS/index.html
+++ b/SERVICIOS/index.html
@@ -3,44 +3,44 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" type="image/png" href="assets/images/logo.png" />
+  <link rel="icon" type="image/png" href="../assets/images/logo.png" />
   <title data-headName>Servicios |</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <script defer src="assets/js/config.js"></script>
-  <script defer src="assets/js/main.js"></script>
-  <script defer src="assets/js/footer-links.js"></script>
-  <script defer src="assets/js/scroll.js"></script>
+  <link rel="stylesheet" href="../assets/css/styles.css">
+  <script defer src="../assets/js/config.js"></script>
+  <script defer src="../assets/js/main.js"></script>
+  <script defer src="../assets/js/footer-links.js"></script>
+  <script defer src="../assets/js/scroll.js"></script>
 </head>
 
 <body>
 
   <header class="header">
-    <h1 data-headName></h1>
-    <nav>
-      <a href="index.html">Inicio</a>
-      <div class="dropdown">
-        <button class="dropbtn">
-          <a href="services.html">Servicios</a><span class="arrow">&#9660;</span>
-        </button>
-        <div class="dropdown-content">
-          <a href="services.html#implementation">Implementación</a>
-          <a href="services.html#design">Diseño de redes</a>
-          <a href="services.html#VPN">Soluciones VPN</a>
-          <a href="services.html#hardening">Hardening</a>
-          <a href="services.html#monitoreo">Monitoreo infraestructura</a>
-          <a href="services.html#consultoria">Consultoría</a>
-        </div>
-      </div>
-      <a href="about-us.html">Sobre Nosotros</a>
-    </nav>
-  </header>
+        <h1 data-headName></h1>
+        <nav>
+            <a href="../">Inicio</a>
+            <div class="dropdown">
+                <button class="dropbtn">
+                    <a href="/">Servicios</a><span class="arrow">&#9660;</span>
+                </button>
+                <div class="dropdown-content">
+                    <a href="/#implementation">Implementación</a>
+                    <a href="/#design">Diseño de redes</a>
+                    <a href="/#VPN">Soluciones VPN</a>
+                    <a href="/#hardening">Hardening</a>
+                    <a href="/#monitoreo">Monitoreo infraestructura</a>
+                    <a href="/#consultoria">Consultoría</a>
+                </div>
+            </div>
+            <a href="/ABOUTUS/">Sobre Nosotros</a>
+        </nav>
+    </header>
 
   <section class="services">
 
     <!-- HERO 1 -->
     <article class="service-hero" id="implementation">
       <video autoplay muted loop playsinline class="bg-video">
-        <source src="assets/video/networking.mp4" type="video/mp4">
+        <source src="../assets/video/networking.mp4" type="video/mp4">
       </video>
 
       <div class="overlay">
@@ -77,7 +77,7 @@
     <!-- HERO 2 (INTERCALADO) -->
     <article class="service-hero" id="design">
       <video autoplay muted loop playsinline class="bg-video">
-        <source src="assets/video/network-connection.mp4" type="video/mp4">
+        <source src="../assets/video/network-connection.mp4" type="video/mp4">
       </video>
 
       <div class="overlay">
@@ -115,7 +115,7 @@
     <!-- HERO 3  -->
     <article class="service-hero" id="VPN">
       <video autoplay muted loop playsinline class="bg-video">
-        <source src="assets/video/network-connection.mp4" type="video/mp4">
+        <source src="../assets/video/network-connection.mp4" type="video/mp4">
       </video>
 
       <div class="overlay">
@@ -149,7 +149,7 @@
     <!-- HERO 4 (INTERCALADO) -->
     <article class="service-hero" id="hardening">
       <video autoplay muted loop playsinline class="bg-video">
-        <source src="assets/video/network-connection.mp4" type="video/mp4">
+        <source src="../assets/video/network-connection.mp4" type="video/mp4">
       </video>
 
       <div class="overlay">
@@ -180,7 +180,7 @@
     <!-- HERO 5  -->
     <article class="service-hero" id="monitoreo">
       <video autoplay muted loop playsinline class="bg-video">
-        <source src="assets/video/network-connection.mp4" type="video/mp4">
+        <source src="../assets/video/network-connection.mp4" type="video/mp4">
       </video>
 
       <div class="overlay">
@@ -214,7 +214,7 @@
     <!-- HERO 6 (INTERCALADO) -->
     <article class="service-hero" id="consultoria">
       <video autoplay muted loop playsinline class="bg-video">
-        <source src="assets/video/network-connection.mp4" type="video/mp4">
+        <source src="../assets/video/network-connection.mp4" type="video/mp4">
       </video>
 
       <div class="overlay">
@@ -262,29 +262,29 @@
 
     <div class="footer-buttons">
       <a class="footer-btn linkedin" data-link="linkedinLink" target="_blank" aria-label="LinkedIn">
-        <img src="assets/images/LinkedIn_logo.webp" alt="LinkedIn">
+        <img src="../assets/images/LinkedIn_logo.webp" alt="LinkedIn">
       </a>
 
       <a class="footer-btn whatsapp" data-link="whatsappLink" target="_blank" aria-label="WhatsApp">
-        <img src="assets/images/WhatsApp-logo.png" alt="WhatsApp">
+        <img src="../assets/images/WhatsApp-logo.png" alt="WhatsApp">
       </a>
 
       <a class="footer-btn email" data-link="emailLink" aria-label="Correo">
-        <img src="assets/images/Email_icon.png" alt="Email">
+        <img src="../assets/images/Email_icon.png" alt="Email">
       </a>
     </div>
 
     <!-- <div class="footer-buttons">
     <a href="https://www.linkedin.com/company/js2-tech-solutions" target="_blank" class="footer-btn linkedin" aria-label="LinkedIn">
-      <img src="assets/images/LinkedIn_logo.webp" alt="LinkedIn">
+      <img src="../assets/images/LinkedIn_logo.webp" alt="LinkedIn">
     </a>
 
     <a href="https://wa.me/573002584013" target="_blank" class="footer-btn whatsapp" aria-label="WhatsApp">
-      <img src="assets/images/WhatsApp-logo.png" alt="WhatsApp">
+      <img src="../assets/images/WhatsApp-logo.png" alt="WhatsApp">
     </a>
 
     <a href="mailto:contacto@js2solutions.com.co" class="footer-btn email" aria-label="Correo">
-      <img src="assets/images/Email_icon.png" alt="Email">
+      <img src="../assets/images/Email_icon.png" alt="Email">
     </a>
   </div> -->
   </footer>
