--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
         <h1 data-headName></h1>
         <nav>
-            <a href="index">Inicio</a>
+            <a href="/">Inicio</a>
             <div class="dropdown">
                 <button class="dropbtn">
                     <a href="/SERVICIOS/">Servicios</a><span class="arrow">&#9660;</span>
