--- a/ABOUTUS/index.html
+++ b/ABOUTUS/index.html
@@ -3,36 +3,36 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" type="image/png" href="assets/images/logo.png" />
+  <link rel="icon" type="image/png" href="../assets/images/logo.png" />
   <title data-headName>Acerca de Nosotros |</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <script defer src="assets/js/config.js"></script>
-  <script defer src="assets/js/main.js"></script>
-  <script defer src="assets/js/footer-links.js"></script>
+  <link rel="stylesheet" href="../assets/css/styles.css">
+  <script defer src="../assets/js/config.js"></script>
+  <script defer src="../assets/js/main.js"></script>
+  <script defer src="../assets/js/footer-links.js"></script>
 </head>
 
 <body>
 
-  <header class="header">
-    <h1 data-headName></h1>
-    <nav>
-      <a href="index.html">Inicio</a>
-      <div class="dropdown">
-        <button class="dropbtn">
-          <a href="services.html">Servicios</a><span class="arrow">&#9660;</span>
-        </button>
-        <div class="dropdown-content">
-          <a href="services.html#implementation">Implementación</a>
-          <a href="services.html#design">Diseño de redes</a>
-          <a href="services.html#VPN">Soluciones VPN</a>
-          <a href="services.html#hardening">Hardening</a>
-          <a href="services.html#monitoreo">Monitoreo infraestructura</a>
-          <a href="services.html#consultoria">Consultoría</a>
-        </div>
-      </div>
-      <a href="about-us.html">Sobre Nosotros</a>
-    </nav>
-  </header>
+<header class="header">
+        <h1 data-headName></h1>
+        <nav>
+            <a href="../">Inicio</a>
+            <div class="dropdown">
+                <button class="dropbtn">
+                    <a href="/SERVICIOS/">Servicios</a><span class="arrow">&#9660;</span>
+                </button>
+                <div class="dropdown-content">
+                    <a href="/SERVICIOS/#implementation">Implementación</a>
+                    <a href="/SERVICIOS/#design">Diseño de redes</a>
+                    <a href="/SERVICIOS/#VPN">Soluciones VPN</a>
+                    <a href="/SERVICIOS/#hardening">Hardening</a>
+                    <a href="/SERVICIOS/#monitoreo">Monitoreo infraestructura</a>
+                    <a href="/SERVICIOS/#consultoria">Consultoría</a>
+                </div>
+            </div>
+            <a href="/">Sobre Nosotros</a>
+        </nav>
+    </header>
 
   <section class="about-hero">
     <div class="about-content">
@@ -63,32 +63,32 @@
 
   <section id="cert-seccion" class="cert-section">
     <div class="cert-left">
-      <img src="assets/images/Fortinet_logo.svg" alt="Fortinet" class="cert-img active" data-info="info-Fortinet">
-      <img src="assets/images/NetskopeLogo.webp" alt="Netskope" class="cert-img" data-info="info-Netskope">
+      <img src="../assets/images/Fortinet_logo.svg" alt="Fortinet" class="cert-img active" data-info="info-Fortinet">
+      <img src="../assets/images/NetskopeLogo.webp" alt="Netskope" class="cert-img" data-info="info-Netskope">
     </div>
     <div class="cert-right">
       <div id="info-Fortinet" class="cert-info active">
         <div class="info-gallery">
           <!-- Fila 1: 2 imágenes -->
           <div class="gallery-row">
-            <img src="assets/images/nse-certified-specialist-sp-security-operations.svg" alt="FCSS SecOps">
-            <img src="assets/images/nse-certified-specialist-sp-secure-networking.svg" alt="FCSS Security Networking">
+            <img src="../assets/images/nse-certified-specialist-sp-security-operations.svg" alt="FCSS SecOps">
+            <img src="../assets/images/nse-certified-specialist-sp-secure-networking.svg" alt="FCSS Security Networking">
           </div>
           <!-- Fila 2: 2 imágenes -->
           <div class="gallery-row">
-            <img src="assets/images/nse-certified-professional-cloud-security.svg" alt="FCP Cloud Security">
-            <img src="assets/images/nse-certified-professional-secure-networking.svg" alt="FCP Network Security">
+            <img src="../assets/images/nse-certified-professional-cloud-security.svg" alt="FCP Cloud Security">
+            <img src="../assets/images/nse-certified-professional-secure-networking.svg" alt="FCP Network Security">
           </div>
           <!-- Fila 3: varias imágenes -->
           <div class="gallery-row">
-            <img src="assets/images/fnac.png" alt="FNAC">
-            <img src="assets/images/FAC.png" alt="FAC">
-            <img src="assets/images/lanedge.png" alt="LAN EDGE">
-            <img src="assets/images/efw.png" alt="Enterprise Firewall">
-            <img src="assets/images/sdwan.png" alt="SD-WAN">
-            <img src="assets/images/SecOpsAnalyst.png" alt="SecOps">
-            <img src="assets/images/awsCloud.jpeg" alt="AWS Cloud FNT">
-            <img src="assets/images/ftnt_nse_7_public_cloud_security_architect_v7.6.4.png "
+            <img src="../assets/images/fnac.png" alt="FNAC">
+            <img src="../assets/images/FAC.png" alt="FAC">
+            <img src="../assets/images/lanedge.png" alt="LAN EDGE">
+            <img src="../assets/images/efw.png" alt="Enterprise Firewall">
+            <img src="../assets/images/sdwan.png" alt="SD-WAN">
+            <img src="../assets/images/SecOpsAnalyst.png" alt="SecOps">
+            <img src="../assets/images/awsCloud.jpeg" alt="AWS Cloud FNT">
+            <img src="../assets/images/ftnt_nse_7_public_cloud_security_architect_v7.6.4.png "
               alt="Public Cloud Architect">
           </div>
         </div>
@@ -97,8 +97,8 @@
       <div id="info-Netskope" class="cert-info">
         <div class="info-gallery">
           <div class="gallery-row">
-            <img src="assets/images/nsk100.png" alt="Netskope Administrator">
-            <img src="assets/images/nsk200.png" alt="Netskope Integrator">
+            <img src="../assets/images/nsk100.png" alt="Netskope Administrator">
+            <img src="../assets/images/nsk200.png" alt="Netskope Integrator">
           </div>
         </div>
       </div>
@@ -114,29 +114,29 @@
 
     <div class="footer-buttons">
       <a class="footer-btn linkedin" data-link="linkedinLink" target="_blank" aria-label="LinkedIn">
-        <img src="assets/images/LinkedIn_logo.webp" alt="LinkedIn">
+        <img src="../assets/images/LinkedIn_logo.webp" alt="LinkedIn">
       </a>
 
       <a class="footer-btn whatsapp" data-link="whatsappLink" target="_blank" aria-label="WhatsApp">
-        <img src="assets/images/WhatsApp-logo.png" alt="WhatsApp">
+        <img src="../assets/images/WhatsApp-logo.png" alt="WhatsApp">
       </a>
 
       <a class="footer-btn email" data-link="emailLink" aria-label="Correo">
-        <img src="assets/images/Email_icon.png" alt="Email">
+        <img src="../assets/images/Email_icon.png" alt="Email">
       </a>
     </div>
 
     <!-- <div class="footer-buttons">
     <a href="https://www.linkedin.com/company/js2-tech-solutions" target="_blank" class="footer-btn linkedin" aria-label="LinkedIn">
-      <img src="assets/images/LinkedIn_logo.webp" alt="LinkedIn">
+      <img src="../assets/images/LinkedIn_logo.webp" alt="LinkedIn">
     </a>
 
     <a href="https://wa.me/573002584013" target="_blank" class="footer-btn whatsapp" aria-label="WhatsApp">
-      <img src="assets/images/WhatsApp-logo.png" alt="WhatsApp">
+      <img src="../assets/images/WhatsApp-logo.png" alt="WhatsApp">
     </a>
 
     <a href="mailto:contacto@js2solutions.com.co" class="footer-btn email" aria-label="Correo">
-      <img src="assets/images/Email_icon.png" alt="Email">
+      <img src="../assets/images/Email_icon.png" alt="Email">
     </a>
   </div> -->
   </footer>
