--- a/ABOUTUS/index.html
+++ b/ABOUTUS/index.html
@@ -16,7 +16,7 @@
 <header class="header">
         <h1 data-headName></h1>
         <nav>
-            <a href="../">Inicio</a>
+            <a href="/">Inicio</a>
             <div class="dropdown">
                 <button class="dropbtn">
                     <a href="/SERVICIOS/">Servicios</a><span class="arrow">&#9660;</span>
@@ -30,7 +30,7 @@
                     <a href="/SERVICIOS/#consultoria">Consultoría</a>
                 </div>
             </div>
-            <a href="/">Sobre Nosotros</a>
+            <a href="/ABOUTUS/">Sobre Nosotros</a>
         </nav>
     </header>
 
