--- a/SERVICIOS/index.html
+++ b/SERVICIOS/index.html
@@ -17,18 +17,18 @@
   <header class="header">
         <h1 data-headName></h1>
         <nav>
-            <a href="../">Inicio</a>
+            <a href="/">Inicio</a>
             <div class="dropdown">
                 <button class="dropbtn">
                     <a href="/">Servicios</a><span class="arrow">&#9660;</span>
                 </button>
                 <div class="dropdown-content">
-                    <a href="/#implementation">Implementación</a>
-                    <a href="/#design">Diseño de redes</a>
-                    <a href="/#VPN">Soluciones VPN</a>
-                    <a href="/#hardening">Hardening</a>
-                    <a href="/#monitoreo">Monitoreo infraestructura</a>
-                    <a href="/#consultoria">Consultoría</a>
+                    <a href="/SERVICIOS#implementation">Implementación</a>
+                    <a href="/SERVICIOS#design">Diseño de redes</a>
+                    <a href="/SERVICIOS#VPN">Soluciones VPN</a>
+                    <a href="/SERVICIOS#hardening">Hardening</a>
+                    <a href="/SERVICIOS#monitoreo">Monitoreo infraestructura</a>
+                    <a href="/SERVICIOS#consultoria">Consultoría</a>
                 </div>
             </div>
             <a href="/ABOUTUS/">Sobre Nosotros</a>
