--- a/servicios/index.html
+++ b/servicios/index.html
@@ -23,15 +23,15 @@
                     <a href="/">Servicios</a><span class="arrow">&#9660;</span>
                 </button>
                 <div class="dropdown-content">
-                    <a href="/SERVICIOS#implementation">Implementación</a>
-                    <a href="/SERVICIOS#design">Diseño de redes</a>
-                    <a href="/SERVICIOS#VPN">Soluciones VPN</a>
-                    <a href="/SERVICIOS#hardening">Hardening</a>
-                    <a href="/SERVICIOS#monitoreo">Monitoreo infraestructura</a>
-                    <a href="/SERVICIOS#consultoria">Consultoría</a>
+                    <a href="/servicios#implementation">Implementación</a>
+                    <a href="/servicios#design">Diseño de redes</a>
+                    <a href="/servicios#VPN">Soluciones VPN</a>
+                    <a href="/servicios#hardening">Hardening</a>
+                    <a href="/servicios#monitoreo">Monitoreo infraestructura</a>
+                    <a href="/servicios#consultoria">Consultoría</a>
                 </div>
             </div>
-            <a href="/ABOUTUS/">Sobre Nosotros</a>
+            <a href="/aboutus/">Sobre Nosotros</a>
         </nav>
     </header>
 
